[project]
name = "autopahe"
version = "3.0.0"
description = "Cross-platform anime downloader for AnimePahe with advanced features: smart caching, notifications, filters, batch downloads, and record management"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "license.md"}
keywords = ["anime", "downloader", "animepahe", "automation", "cli"]
authors = [
    {name = "haxsys", email = "haxsysgit@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "requests>=2.31.0",
    "playwright>=1.45.0",
    "tqdm>=4.66.0",
    "colorama>=0.4.6",
]

[project.urls]
Homepage = "https://github.com/haxsysgit/autopahe"
Repository = "https://github.com/haxsysgit/autopahe"
Issues = "https://github.com/haxsysgit/autopahe/issues"

[project.scripts]
autopahe = "auto_pahe:main"

[tool.setuptools.packages.find]
include = ["ap_core*", "features*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
