[project]
name = "autopahe"
version = "3.5.0"
description = "Cross-platform anime downloader for AnimePahe with advanced features: smart caching, cross-platform streaming, notifications, filters, batch downloads, and record management"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "license.md"}
keywords = ["anime", "downloader", "animepahe", "automation", "cli"]
authors = [
    {name = "haxsys", email = "haxsysgit@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "requests>=2.31.0",
    "playwright>=1.45.0",
    "tqdm>=4.66.0",
    "colorama>=0.4.6",
    "rich>=13.0.0",
    "beautifulsoup4>=4.12.0",
]

[project.urls]
Homepage = "https://github.com/haxsysgit/autopahe"
Repository = "https://github.com/haxsysgit/autopahe"
Issues = "https://github.com/haxsysgit/autopahe/issues"

[project.optional-dependencies]
test = ["pytest>=7.0"]
publish = ["build>=1.2.0", "twine>=4.0.2"]

[project.scripts]
autopahe = "auto_pahe:main"

[tool.setuptools.packages.find]
include = ["ap_core*", "features*", "collection*"]

[tool.setuptools]
py-modules = ["auto_pahe", "kwikdown", "config"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "twine>=6.1.0",
]
